--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=HL7-FHIR-SAMPLES-ORACLE
+spring.application.name=HL7-FHIR-PATIENT-ORACLE
 
 spring.datasource.url=jdbc:oracle:thin:@//192.168.100.5:1521/XE
 spring.datasource.username=fvalds
@@ -15,3 +15,13 @@ server.port=9091
 #logging.level.com.example=ERROR
 # Configuración para almacenar en archivo (opcional)
 #logging.file.name=logs/miaplicacion.log
+
+#spring.application.name=product-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+#server.port=0
+
+#Desactivar la verificación de compatibilidad
+spring.cloud.compatibility-verifier.enabled=false
