Contenido: 1. Entendiendo la Configuración Centralizada, Config Server 2. Creando properties por perfiles para los Microservicios 3. Creando y configurando el proyecto Spring Config Server 4. Conectando Microservicios hl7 fhir patientOracle al Config Server

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,17 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<!-- HASTA AQUÍ -->
+		<dependency> <!-- AGREGAR ESTO PARA Config Server -->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		<!-- HASTA AQUÍ -->
 	</dependencies>
 
 	<build>
