Contenido: 1. Introducción a RefreshScope 2. Implementando RefreshScope 3. Probando RefreshScope en los Microservicios

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,17 @@
+spring.application.name=HL7-FHIR-PATIENT-ORACLE
+
+#Desactivar la verificación de compatibilidad
+spring.cloud.compatibility-verifier.enabled=false
+
+# Definir el perfil que deseamos activar configuración Config-Server
+spring.cloud.config.profile=dev
+
+# Registrar los servicios con localhost en Eureka.
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+
 #Aplicación de configuración Config-Server
 string.cloud.config.uri=http://localhost:8888
+
+# Refrescando las Configuraciones
+management.endpoints.web.exposure.include=*
