--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,23 @@
 			<version>4.1.3</version>
 		</dependency>
 		<!-- HASTA AQUÍ -->
+		<dependency> <!-- AGREGAR ESTO PARA RefreshScope -->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>4.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.3.4</version>
+		</dependency>
+		<!-- HASTA AQUÍ -->
+
 	</dependencies>
 
 	<build>
