Contenido: 1. Introducción a HashiCorp Vault 2. Implementando Vault en Booking Microservice

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,11 @@
 			<version>3.3.4</version>
 		</dependency>
 		<!-- HASTA AQUÍ -->
-
+		<dependency> <!-- AGREGAR ESTO PARA HashiCorp Vault -->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
+		</dependency>
+		<!-- HASTA AQUÍ -->
 	</dependencies>
 
 	<build>
