--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -15,3 +15,11 @@ string.cloud.config.uri=http://localhost:8888
 
 # Refrescando las Configuraciones
 management.endpoints.web.exposure.include=*
+
+# Configuración de Vault
+spring.cloud.vault.application-name=HL7-FHIR-PATIENT-ORACLE
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=token
+spring.cloud.vault.token=79201519-8e8c-477e-8d43-1b40a0c6ded5
