--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2023.0.0</version>  <!-- Última versión estable -->
+				<version>2023.0.3</version>  <!-- Última versión estable -->
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -100,6 +100,18 @@
 		<dependency> <!-- AGREGAR ESTO PARA HashiCorp Vault -->
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
+		</dependency>
+		<!-- HASTA AQUÍ -->
+
+		<dependency><!-- AGREGAR ESTO PARA Message Broker, Refresh Configuration, RabbitMQ-->
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-amqp</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 		<!-- HASTA AQUÍ -->
 	</dependencies>
