--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -28,6 +28,6 @@ spring.cloud.vault.token={SPRING_CLOUD_VAULT_TOKEN}
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 #Amabas variables administradas por en Config-Server y guardadas en Servidor Vault
-#spring.rabbitmq.username=fvalds
-#spring.rabbitmq.password=Fiscal2010
+#spring.rabbitmq.username=
+#spring.rabbitmq.password=
 
